--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "start": "nodemon src/app.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "ejs": "^3.1.6"
+    "express-ejs-layouts": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.3",
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.4.0"
   },
   "keywords": [],
   "author": "",
