--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "mqtt": "5.10.3"
   },
   "keywords": [],
   "author": "",
